# stylekit-style-prompts-skill

./: .gitignore  GO_LIVE_CHECKLIST.md  README.md  RELEASE.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: regression-gate.yml
agents/: claude.yaml  openai.yaml
prompts/: expand-animation-profiles.md  expand-interaction-patterns.md
references/: accessibility-gate.md  benchmark-baseline.json  cc-decision-conversation-template.md  design-system-patterns.md  frontend-design-principles.md  github-actions-regression-gate.yml  output-contract.md  style-search-index.json
references/schemas/: generate_brief_output.json  run_pipeline_manual_output.json  search_stylekit_output.json
references/taxonomy/: animation-profiles.v2.json  interaction-patterns.v2.json  site-type-routing.json  style-tag-map.v2.json  style-tag-registry.json  tag-aliases.json  tag-schema.json
scripts/: _brief_constants.py  _common.py  audit_style_rule_conflicts.py  benchmark_pipeline.py  blend_engine.py  brief_builder.py  ci_regression_gate.sh  generate_brief.py  merge_taxonomy_expansion.py  prompt_generator.py  propose_upgrade.py  qa_prompt.py  reference_handler.py  refresh-style-prompts.sh  review_upgrade_candidate.py  run_pipeline.py  search_stylekit.py  smoke_test.py  v2_taxonomy.py  validate_output_contract_sync.py  validate_taxonomy.py
tests/: conftest.py  test_blend_engine.py  test_brief_builder.py  test_common.py  test_output_contracts.py  test_qa_prompt.py  test_v2_taxonomy.py  test_validate_output_contract_sync.py  test_validate_taxonomy.py
(+3 files in other folders)
